Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/VoidGenericMethod.out
VoidGenericMethod.java:11:10: compiler.err.annotation.type.not.applicable
1 error
